[tool.poetry]
name = "content_marketing2"
version = "0.1.0"
description = "content_marketing2 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
content_marketing2 = "content_marketing2.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"